--- a/Sorting Visualizer/CSS/mainstyle.css
+++ b/Sorting Visualizer/CSS/mainstyle.css
@@ -2,34 +2,23 @@
 
 body{
 	font: 100% Verdana, Arial, Helvetica, sans-serif;
-	/*background: #666666;*/
 	margin: 0;
 	padding: 0;
 	text-align: center;
 	color: #000000;
 }
 
-.VisualizationMainPage #mainContent{
-
-	background: #FFFFFF;
-}
-
 .VisualizationMainPage #container {
 
 	background: #FFFFFF;
-	text-align: left; /* this overrides the text-align: center on the body element. */
+	text-align: left;
 }
 
-.VisualizationMainPage #algoControlSection{
+.VisualizationMainPage #container{
 
-	background: #DDEEDD; 
-	color: #000000; 
-}
-
-.VisualizationMainPage #generalAnimationControlSection{
-
-	background: #DDEEDD; 
-	color: #006600;
+	background: #FFFFFF;
+	margin: 0 auto;
+	text-align: left;
 }
 
 .VisualizationMainPage  #header{ 
@@ -39,61 +28,44 @@ body{
 	padding: 0 10px 0 20px;
 }
 
-.VisualizationMainPage #header  A:visited{ 
-	text-decoration: none;
-    color: #ffCC33; 
-}
-
 .VisualizationMainPage #header h1{
 
 	margin: 0; 
 	padding: 10px 0; 
 }
 
-.VisualizationMainPage #header A:link{
-    
-    text-decoration: none;
-    color: #ffCC33;
-}
-
-.VisualizationMainPage #container{
+.VisualizationMainPage #mainContent{
 
 	background: #FFFFFF;
-	margin: 0 auto; /* the auto margins (in conjunction with a width) center the page */
-	text-align: left; /* this overrides the text-align: center on the body element. */
 }
 
-.VisualizationMainPage #footer  A:visited{ 
-	
-	text-decoration: none;
-    color: ffcc33; 
+.VisualizationMainPage #algoControlSection{
+
+	font-size: 20px;
+	background: #DDEEDD; 
+	color: #000000; 
 }
 
-.VisualizationMainPage #footer A:link{
-
-    text-decoration: none;
-	color: #ffCC33;
+#nob{
+	font-size: 15pt;
 }
 
-.VisualizationMainPage #mainContent h1{
-
-	padding: 0 20px; 
-	background: #FFFFFF;
-	color: #006633
+#spd{
+	font-size: 15pt;
 }
 
-.VisualizationMainPage #mainContent h2{
-
-	padding: 0 20px; 
-	background: #FFFFFF;
-	color: #006633
+#bargenerate{
+	font-size: 20px;
 }
 
-.VisualizationMainPage #mainContent h3{
+#sort{
+	font-size: 20px;
+}
 
-	padding: 0 20px; 
-	background: #FFFFFF;
-	color: #006633
+.VisualizationMainPage #generalAnimationControlSection{
+
+	background: #DDEEDD; 
+	color: #006600;
 }
 
 .VisualizationMainPage #footer{
@@ -103,51 +75,4 @@ body{
 	color: #ffcc33;
 }
 
-.VisualizationMainPage #footer p{
-	
-	margin: 0; 	
-	padding: 10px 0; 
-}
-
 EM {text-decoration: bold;}
-
-
-/*
-.mydivs{
-	border: 2px solid blue;
-	margin: 5px;
-	padding: 10px;
-}
-*/
-
-/*
-.mytables{
-	border: 2px solid blue;
-	margin: 5px;
-	padding: 10px;
-}
-*/
-
-
-/* access by id
-#heading1{
-	color: blue;
-}
-*/
-
-/* access by tag name
-div p{
-	color: red;
-}
-*/
-
-/* access by class name
-.mycube{
-	width: 50px;
-	height: 50px;
-	background-color: blueviolet;
-	opacity: 0.4;
-	position: absolute;
-	padding: 20px;
-}
-*/
