--- a/Sorting Visualizer/CSS/otherelement.css
+++ b/Sorting Visualizer/CSS/otherelement.css
@@ -1,8 +1,47 @@
 canvas{
-	border: 1px solid black;
+	border: 5px solid darkorange;
 	padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+label{
+    color: royalblue;
+    font-family: bold;
+    padding: 5px;
+}
+
+button{
+    border: 5px dashed;
+    background-color: lightcyan;
+    font-family: bold;
+    margin-left: 10px;   
+}
+
+#nob{
+    font-size: 15pt;
+    background-color: lightcyan;
+    font-family: bold;
+}
+
+#spd{
+    font-size: 15pt;
+    background-color: lightred;
+    font-family: bold;
+}
+
+#ssm{
+    font-size: 15pt;
+    background-color: lightyellow;
+    font-family: bold;
+}
+
+#bargenerate{
+    font-size: 20px;
+}
+
+#sort{
+    font-size: 20px;
 }
