--- a/Sorting Visualizer/CSS/mainstyle.css
+++ b/Sorting Visualizer/CSS/mainstyle.css
@@ -41,25 +41,10 @@ body{
 
 .VisualizationMainPage #algoControlSection{
 
+	margin-bottom: 5px;
 	font-size: 20px;
 	background: #DDEEDD; 
 	color: #000000; 
-}
-
-#nob{
-	font-size: 15pt;
-}
-
-#spd{
-	font-size: 15pt;
-}
-
-#bargenerate{
-	font-size: 20px;
-}
-
-#sort{
-	font-size: 20px;
 }
 
 .VisualizationMainPage #generalAnimationControlSection{
@@ -70,8 +55,11 @@ body{
 
 .VisualizationMainPage #footer{
 
+	margin-top: 5px;
 	padding: 0 10px;
     background: #006633; 
+    text-align: center;
+    font-size: 20px;
 	color: #ffcc33;
 }
 
